overflow bug fixed

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -5,8 +5,8 @@
 }
 
 .fLists {
-  display: flex;
   width: 100%;
+  display: flex;
   justify-content: space-between;
   margin-bottom: 50px;
 }
@@ -14,6 +14,10 @@
 .fList{
     list-style:none;
     padding:0;
+}
+
+.fText{
+  margin-bottom:10px;
 }
 
 .fListItem{
